=== 3.5.2

* Bug fixes
  * Fixed syntax highlighting CSS class generation.  Reported by Daniel
    Bretoi.
  * Fixed ri for methods with aliases.  Pull Request #15 by Sven Riedel.
  * Added windows-specific test for test_check_files.
  * Darkfish now supports sections.  Template and generator author see
    RDoc::Context#each_section to add section support.  RubyForge Bug #26883
    by Jeff Hodges.

=== 3.5.1 / 2010-01-30

* Bug fixes
  * Fixed some typos.  Pull request #13 by R.T. Lechow.
  * Ensure an RDoc::Stats is created in #parse_files.  Fixes documentation for
    railties which has no files.  Reported by Aaron Patterson

=== 3.5 / 2010-01-29

* Minor enhancements
  * RDoc::Parser::C looks for rb_scan_args and fills in RDoc::AnyMethod#params
    appropriately.  This may provide useful information if the author did not
    provide a call-seq.
  * RDoc::Parser::C now records the function name for methods implemented in
    C.
  * RDoc now records file and byte offset information for methods.
* Bug fixes
  * Locations of module aliases are now recorded.
  * RDoc::Parser::C finds method bodies better now.
  * Fixed further locations where output encoding was not preserved.  Bug #11
    by Vít Ondruch, RubyForge bug #28791 by Dzmitry Prakapenka.
  * Fixed display of numeric lists on the index page and file pages.  Bug #12
    by tobijk.
  * Skip TestRDocOptions#test_check_files on windows until a windows-specific
    test can be created.  RubyForge bug #28821 by Usaku Nakamura.
  * Fixed line-height of headings in method and alias descriptions.  RubyForge
    Bug #2770 by Adam Avilla
  * Relaxed RDoc::Parser::Ruby#remove_private_comments to consume more dashes
    as older versions once did.  Bug #7 by Claus Folke Brobak.

=== 3.4 / 2010-01-06

* Minor enhancements
  * RDoc::RDoc#document may now be called with an RDoc::Options instance.
* Bug fixes
  * Added skips to Encoding tests running on 1.8.
  * Fixed warnings

=== 3.3 / 2010-01-03

* Minor enhancements