@@ -1,4 +1,5 @@
 require 'rubygems'
+require 'cgi'
 require 'minitest/autorun'
 require 'rdoc'
 require 'rdoc/code_objects'
@@ -6,7 +7,16 @@ require 'rdoc/code_objects'
 class TestRDocContextSection < MiniTest::Unit::TestCase
   
   def setup
-    @s = RDoc::Context::Section.new nil, 'section', '# comment'
+    @S = RDoc::Context::Section
+    @s = @S.new nil, 'section', '# comment'
+  end
+
+  def test_aref
+    assert_equal 'section', @s.aref
+
+    assert_equal '5Buntitled-5D', @S.new(nil, nil, nil).aref
+
+    assert_equal 'one+two', @S.new(nil, 'one two', nil).aref
   end
 
   def test_comment_equals
@@ -18,7 +28,7 @@ class TestRDocContextSection < MiniTest::Unit::TestCase
 
     assert_equal "# comment\n# ---\n# other", @s.comment
 
-    s = RDoc::Context::Section.new nil, nil, nil
+    s = @S.new nil, nil, nil
 
     s.comment = "# :section:\n# other"
 
@@ -30,6 +40,14 @@ class TestRDocContextSection < MiniTest::Unit::TestCase
     assert_equal '',    @s.extract_comment("# :section: b\n")
     assert_equal '# c', @s.extract_comment("# :section: b\n# c")
     assert_equal '# c', @s.extract_comment("# a\n# :section: b\n# c")
+  end
+
+  def test_sequence
+    _, err = capture_io do
+      assert_match(/\ASEC\d{5}\Z/, @s.sequence)
+    end
+
+    assert_equal "#{@S}#sequence is deprecated, use #aref\n", err
   end
 
 end
